--- a/cloverbazar/views/productRubro.ejs
+++ b/cloverbazar/views/productRubro.ejs
@@ -15,25 +15,25 @@
         <h2>Rubros</h2>
         <section class="rubros">
             <article class="tarjeta-rubro">
-                <a href="">
+                <a href="/product">
                     <img src="/images/imagentipo.png" alt="">
                     <h3>Mates</h3>
                 </a>
             </article>
             <article class="tarjeta-rubro">
-                <a href="">
+                <a href="/product">
                     <img src="/images/imagentipo.png" alt="">
                     <h3>Vasos</h3>
                 </a>
             </article>
             <article class="tarjeta-rubro">
-                <a href="">
+                <a href="/product">
                     <img src="/images/imagentipo.png" alt="">
                     <h3>Bowls</h3>
                 </a>
             </article>
             <article class="tarjeta-rubro">
-                <a href="">
+                <a href="/product">
                     <img src="/images/imagentipo.png" alt="">
                     <h3>Varios</h3>
 
