--- a/cloverbazar/public/stylesheets/mayorista.css
+++ b/cloverbazar/public/stylesheets/mayorista.css
@@ -44,7 +44,7 @@ main form textarea{
     padding: 5px;
 }
 main form button{
-    width: 90%;
+    width: 95px;
     border: 0;
     border-radius: 5px;
     margin: 5px 0;
