--- a/cloverbazar/views/productAdd.ejs
+++ b/cloverbazar/views/productAdd.ejs
@@ -18,14 +18,14 @@
                 <div class="contenedor-datos">
                 <label for="nombreProducto">Nombre de Producto:</label>
                 <input type="text" id="nombreProducto" placeholder="Nombre de producto">
-                <label for="tipoProducto">Tipo:</label>
-                <input type="text" id="tipoProducto" placeholder="Tipo">
+                <label for="rubroProducto">Rubro:</label>
+                <input type="text" id="rubroProducto" placeholder="Rubro">
                 <label for="colorProducto">Color:</label>
                 <input type="text" id="colorProducto" placeholder="Color">
                 <label for="medidasProducto">Medidas:</label>
                 <input type="text" id="medidasProducto" placeholder="Medidas">
-                <label for="materialProducto">Material:</label>
-                <input type="text" id="materialProducto" placeholder="Material">
+                <label for="descripcionProducto">Descripcion:</label>
+                <input type="text" id="descripcionProducto" placeholder="Descripcion">
                 </div>
                 <div class="contenedor-img">
                 <label for="imgProducto">Imagen de Producto:</label>
