--- a/cloverbazar/public/stylesheets/header.css
+++ b/cloverbazar/public/stylesheets/header.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Libre Franklin', sans-serif;
+}
 body{
     margin: 0;
     padding: 0;
@@ -116,9 +119,7 @@ footer div.info a {
     font-size: 14px;
 }
 
-footer div.info {
-    margin-left: 20px;
-}
+
 
 @media(min-width:768px) {
     /*Cambios HEADER*/
