--- a/cloverbazar/public/stylesheets/productRubro.css
+++ b/cloverbazar/public/stylesheets/productRubro.css
@@ -15,7 +15,8 @@ main  h2{
     font-weight: 400;
     display: block;
     text-align: left;
-    margin-left: 30px
+    margin-left: 30px;
+    position: relative;
 }
 
 main section img{
