--- a/cloverbazar/views/partials/footer.ejs
+++ b/cloverbazar/views/partials/footer.ejs
@@ -1,7 +1,24 @@
 <footer>
     <div class="foot">
         <a href="https://wa.me/5491128056500" target="_blank" class="whatsapp"><img src="/images/whatsapp1.png" alt="logo whatsapp"></a>
+        
         <div class="infofooter">
+            <nav>
+                <ul>
+                    <a href="/productRubro">
+                        <li>Productos</li>
+                    </a>
+                    <a href="/contacto">
+                        <li>Contacto</li>
+                    </a>
+                    <a href="/mayorista">
+                        <li>Mayorista</li>
+                    </a>
+                    <a href="/faqs">
+                        <li>FAQs</li>
+                    </a>
+                </ul>
+            </nav>
             <div class="rrss">
                 <h5 class="redes">Seguinos en nuestras redes:</h5>
                 <div class="iconos">
