--- a/cloverbazar/views/product.ejs
+++ b/cloverbazar/views/product.ejs
@@ -14,30 +14,16 @@
     <main>
         <h2>Productos</h2>
         <section>
+            <%for(let i = 0 ; i < products.length ; i++) {
+                if(products[i].rubro == category) { %>
             <article>
-                <a href="/productDetail"> 
-                    <img src="/images/imagentipo.png" alt="">
-                    <h3>Mate1   $$$$</h3>
+                <a href="/products/detail/<%=products[i].id%>"> 
+                    <img src="/images/products/<%=products[i].imagen%>" alt="">
+                    <h3><%=products[i].nombre%> </h3>
+                    <h3> $<%=products[i].precio%> </h3>
                 </a>
             </article>
-            <article>
-                <a href="/productDetail">
-                    <img src="/images/imagentipo.png" alt="">
-                    <h3> Mate2   $$$$</h3> 
-                </a>
-            </article>
-            <article>
-                <a href="/productDetail"> 
-                    <img src="/images/imagentipo.png" alt="">
-                    <h3>Mate3   $$$$</h3> 
-                </a>
-            </article>
-            <article>
-                <a href="/productDetail">
-                    <img src="/images/imagentipo.png" alt="">
-                    <h3>Mate4   $$$$</h3> 
-                </a>
-            </article>
+            <% } } %>
     </section>
     </main>
     <%-include('partials/footer')%>
