--- a/cloverbazar/public/stylesheets/header.css
+++ b/cloverbazar/public/stylesheets/header.css
@@ -45,8 +45,8 @@ header div.barra2 div.menuysearch {
     margin-right: 11px;
 }
 
-header div.barra2 div.menuysearch div.search {
-    padding-right: 15px;
+header div.barra2 div.menuysearch form.search-form {
+    margin-right: 15px;
 }
 
 header div.barra2 nav ul{
@@ -57,12 +57,34 @@ header i{
     color: rgb(46, 46, 46);
 }
 
-header button{
+header div.loginButton button{
     border: 0;
     background-color:  rgb(46, 46, 46);
     color: white;
     border-radius: 5px;
     padding: 5px;
+}
+
+form.search-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+form input.search-form-input {
+    width: 40px;
+    border: 0;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    height: 20px;
+}
+
+.search-form-button {
+    background-color: white;
+    border: 0;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    height: 20px;
 }
 
 /*FOOTER*/
@@ -159,20 +181,30 @@ footer nav ul li {
         display: none;
     }
 
-    header div.barra2 div.menuysearch {
-        width: 20px;
-        margin-right: 15px;
-
+    header div.barra2 div.menuysearch form.search-form {
+        margin-right: 0px;
     }
-    
-    header div.barra2 div.menuysearch div.search {
-        padding-right: 0;
+
+    header div.barra2 div.menuysearch {
+        width: 100px;
+    }
+
+    form.search-form {
+        width: 100px;
+    }
+
+    form input.search-form-input {
+        width: 70px;
     }
 
     /*Cambios FOOTER*/
 
     footer div.foot a.whatsapp img {
         width: 60px;
+    }
+
+    footer div.foot a.whatsapp img:hover {
+        width: 65px;
     }
 
     footer div.foot a.whatsapp {
@@ -189,6 +221,21 @@ footer nav ul li {
     footer div.foot div.infofooter div.rrss {
         display: flex;
         flex-flow: column wrap;
+    }
+
+}
+
+@media(min-width:1024px) {
+    form.search-form {
+        width: 150px;
+    }
+
+    header div.barra2 div.menuysearch {
+        width: 150px;
+    }
+
+    form.search-form input {
+        width: 115px;
     }
 
 }
