--- a/cloverbazar/views/faqs.ejs
+++ b/cloverbazar/views/faqs.ejs
@@ -1,62 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ's</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/header.css">
-    <link rel="stylesheet" href="/stylesheets/faqs.css">
-</head>
-<body>
-    <%-include('./partials/header')%>
-    <main>
-        <h1>PREGUNTAS FRECUENTES</h1>
-        <section>
-            <article>
-                <h3>¿Dónde están ubicados?</h3>
-                <p>Estamos en Villa Crespo, CABA.</p>
-            </article>
-            <article>
-                <h3>¿Venden por mayor?</h3>
-                <p>Si, vendemos por mayor, tenemos a disposición nuestro catálogo para que puedas ver los precios. Depende la cantidad de cada producto estos pueden variar.</p>
-            </article>
-            <article>
-                <h3>¿Venden por menor?</h3>
-                <p>Si, vendemos por menor, nuestros productos están en la página de Facebook y de Instagram, donde también vas a poder ver los precios.</p>
-            </article>
-            <article>
-                <h3>¿Hay un monto mínimo de compra?</h3>
-                <p>No tenemos monto mínimo. Se puede comprar por la cantidad que desees.</p>
-            </article>
-            <article>
-                <h3>¿Siempre tienen stock?</h3>
-                <p>Siempre  se debe consultar el stock antes de realizar un pedido. Puede pasar que no tengamos ese producto o que no tengamos el color deseado. En caso de no tener lo que buscas, nos agendamos tu contacto para avisarte cuando nos entre.</p>
-            </article>
-            <article>
-                <h3>¿Realizan envíos? ¿Cómo?</h3>
-                <ul>
-                    <li>Envíos en CABA: sin cargo con un monto mínimo de compra dependiendo de la zona.</li>
-                    <li>Envíos en GBA: Con moto o por Correo Argentino  a cargo del cliente.</li>
-                    <li>Envíos al interior: Por Correo Argentino a cargo del cliente.
-                        <p class="aclaracion">
-                            Los envíos por correo son con previa acreditación del monto del pedido y del envío. 
-                            Despachamos en el día o al día siguiente siempre y cuando tengamos stock de lo pedido.
-                        </p>
-                    </li>
-                </ul>
-            </article>
-            <article>
-                <h3>¿Cuáles son los métodos de pago?</h3>
-                <ul>
-                    <li>Efectivo</li>
-                    <li>Transferencia o depósito bancario</li>
-                    <li>Mercado Pago</li>
-                </ul>
-            </article>
-        </section>
-    </main>
-    <%-include('./partials/footer')%>
-</body>
-</html>
+<link rel="stylesheet" href="/stylesheets/faqs.css">
+
+<%-include('./partials/header')%>
+<main>
+    <h1>PREGUNTAS FRECUENTES</h1>
+    <section>
+        <article>
+            <h3>¿Dónde están ubicados?</h3>
+            <p>Estamos en Villa Crespo, CABA.</p>
+        </article>
+        <article>
+            <h3>¿Venden por mayor?</h3>
+            <p>Si, vendemos por mayor, tenemos a disposición nuestro catálogo para que puedas ver los precios. Depende
+                la cantidad de cada producto estos pueden variar.</p>
+        </article>
+        <article>
+            <h3>¿Venden por menor?</h3>
+            <p>Si, vendemos por menor, nuestros productos están en la página de Facebook y de Instagram, donde también
+                vas a poder ver los precios.</p>
+        </article>
+        <article>
+            <h3>¿Hay un monto mínimo de compra?</h3>
+            <p>No tenemos monto mínimo. Se puede comprar por la cantidad que desees.</p>
+        </article>
+        <article>
+            <h3>¿Siempre tienen stock?</h3>
+            <p>Siempre  se debe consultar el stock antes de realizar un pedido. Puede pasar que no tengamos ese producto
+                o que no tengamos el color deseado. En caso de no tener lo que buscas, nos agendamos tu contacto para
+                avisarte cuando nos entre.</p>
+        </article>
+        <article>
+            <h3>¿Realizan envíos? ¿Cómo?</h3>
+            <ul>
+                <li>Envíos en CABA: sin cargo con un monto mínimo de compra dependiendo de la zona.</li>
+                <li>Envíos en GBA: Con moto o por Correo Argentino a cargo del cliente.</li>
+                <li>Envíos al interior: Por Correo Argentino a cargo del cliente.
+                    <p class="aclaracion">
+                        Los envíos por correo son con previa acreditación del monto del pedido y del envío.
+                        Despachamos en el día o al día siguiente siempre y cuando tengamos stock de lo pedido.
+                    </p>
+                </li>
+            </ul>
+        </article>
+        <article>
+            <h3>¿Cuáles son los métodos de pago?</h3>
+            <ul>
+                <li>Efectivo</li>
+                <li>Transferencia o depósito bancario</li>
+                <li>Mercado Pago</li>
+            </ul>
+        </article>
+    </section>
+</main>
+<%-include('./partials/footer')%>
