--- a/cloverbazar/views/contacto.ejs
+++ b/cloverbazar/views/contacto.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/contacto.css">
 
-<%-include('./partials/header')%>
+<%-include('./partials/header', {title: 'Contacto'})%>
 <main>
     <section class="formulario-contacto">
         <form action="">
