--- a/cloverbazar/views/faqs.ejs
+++ b/cloverbazar/views/faqs.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/faqs.css">
 
-<%-include('./partials/header')%>
+<%-include('./partials/header', {title: 'Preguntas frecuentes'})%>
 <main>
     <h1>PREGUNTAS FRECUENTES</h1>
     <section>
