--- a/cloverbazar/views/products/product.ejs
+++ b/cloverbazar/views/products/product.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/product.css">
 
-<%-include('../partials/header')%>
+<%-include('../partials/header', {title: category})%>
 <main>
     <h2>Productos</h2>
     <section>
