--- a/cloverbazar/views/products/productRubro.ejs
+++ b/cloverbazar/views/products/productRubro.ejs
@@ -1,30 +1,30 @@
 <link rel="stylesheet" href="/stylesheets/productRubro.css">
 
-<%-include('../partials/header')%>
+<%-include('../partials/header', {title: 'Rubros'})%>
 <main>
     <h2>Rubros</h2>
     <section class="rubros">
         <article class="tarjeta-rubro">
-            <a href="/products">
-                <img src="/images/imagentipo.png" alt="">
+            <a href="/products/rubro/mates">
+                <img src="/images/products/rubro-mates.png" alt="">
                 <h3>Mates</h3>
             </a>
         </article>
         <article class="tarjeta-rubro">
-            <a href="/product">
-                <img src="/images/imagentipo.png" alt="">
+            <a href="/products/rubro/vasos">
+                <img src="/images/products/rubro-vasos.png" alt="">
                 <h3>Vasos</h3>
             </a>
         </article>
         <article class="tarjeta-rubro">
-            <a href="/product">
-                <img src="/images/imagentipo.png" alt="">
+            <a href="/products/rubro/bowls">
+                <img src="/images/products/rubro-bowls.png" alt="">
                 <h3>Bowls</h3>
             </a>
         </article>
         <article class="tarjeta-rubro">
-            <a href="/product">
-                <img src="/images/imagentipo.png" alt="">
+            <a href="/products/rubro/varios">
+                <img src="/images/products/rubro-varios.png" alt="">
                 <h3>Varios</h3>
 
             </a>
