--- a/cloverbazar/views/results.ejs
+++ b/cloverbazar/views/results.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/product.css">
 
-<%-include('partials/header')%>
+<%-include('partials/header', {title: 'Resultados de la búsqueda'})%>
 <main>
     <h2>Resultados de la búsqueda: <%=loQueBuscoElUsuario%></h2>
     <section>
