--- a/cloverbazar/views/users/register.ejs
+++ b/cloverbazar/views/users/register.ejs
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="/stylesheets/forms.css">
 
-<%-include('../partials/header')%>
+<%-include('../partials/header', {title: 'Registrate'})%>
 <main>
     <h2>Registro</h2>
-    <form action="" method="post">
+    <form action="" method="POST" class="forms">
         <input type="text" name="nombre" placeholder="Nombre">
         <input type="email" name="email" placeholder="E-mail">
         <input type="password" name="contraseña" placeholder="Contraseña">
