--- a/cloverbazar/views/products/productAdd.ejs
+++ b/cloverbazar/views/products/productAdd.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/productAdd.css">
 
-<%-include('../partials/header')%>
+<%-include('../partials/header', {title: 'Crear nuevo producto'})%>
 <main>
     <section>
         <h2>Agregar productos</h2>
