--- a/cloverbazar/views/products/productCart.ejs
+++ b/cloverbazar/views/products/productCart.ejs
@@ -1,30 +1,29 @@
 <link rel="stylesheet" href="/stylesheets/forms.css">
 
-<%-include('../partials/header')%>
+<%-include('../partials/header', {title: 'Carrito'})%>
 <main>
     <h2>Tu Compra</h2>
-    <form action="" method="post" class="formulario-carrito">
+    <form action="" method="POST" class="forms formulario-carrito">
+        <%for(let i=0 ; i < productsCart.length ; i++) { %>
         <article>
-            <img src="/images/imagentipo.png" alt="Imagen de producto seleccionado">
-            <p>Nombre producto</p>
-            <p>Cantidad</p>
-            <p>$$$$</p>
+            <img src="/images/products/<%=productsCart[i].imagen%>" alt="Imagen de producto seleccionado">
+            <p><%=productsCart[i].nombre%></p>
+            <p><input type="number" name="cantidad" value="1" class="cantidad"></p>
+            <p>$<%=productsCart[i].precio%></p>
         </article>
-        <article>
-            <img src="/images/imagentipo.png" alt="Imagen de producto seleccionado">
-            <p>Nombre producto</p>
-            <p>Cantidad</p>
-            <p>$$$$</p>
-        </article>
-        <article>
-            <img src="/images/imagentipo.png" alt="Imagen de producto seleccionado">
-            <p>Nombre producto</p>
-            <p>Cantidad</p>
-            <p>$$$$</p>
-        </article>
+        <% } %>
         <article class="total-compra">
             <p>Total</p>
-            <p>$$$$</p>
+            <% var total = 0;
+            if(productsCart == []){ %>
+               <h2>El carrito esta vacio</h2> 
+            <% } else {
+            for(let i=0 ; i < productsCart.length ; i++) {
+                total = total + productsCart[i].precio;
+            } %>
+            <p>$<%=total%></p>
+            <% } %>
+            
         </article>
         <button type="submit" class="confirmar-compra">Confirmar compra</button>
         <a href="/product">Seguir comprando</a>
