--- a/cloverbazar/views/products/productDetail.ejs
+++ b/cloverbazar/views/products/productDetail.ejs
@@ -1,44 +1,38 @@
 <link rel="stylesheet" href="/stylesheets/productDetail.css">
 
-<%-include('../partials/header')%>
+<%-include('../partials/header', {title: product.nombre})%>
 <main>
     <section class="detalleprod">
         <article class="image">
-            <img src="/images/imagentipo.png" alt="">
+            <img src="/images/products/<%=product.imagen%>" alt="Imagen del producto <%=product.nombre%>">
             <div>
-                <h1><span class="nombreprod"> Nombre Producto</span> <span class="precioprod"> $$$$</span></h1>
-                <button>Agregar al carrito</button>
+                <h1 class="nombreprod"> <%=product.nombre%></h1>
+                <h1 class="precioprod"> $ <%=product.precio%></h1>
+                <form action="/products/cart/<%=product.id%>" method="POST" class="agregar-al-carrito">
+                    <button type="submit">Agregar al carrito</button>
+                </form>
             </div>
         </article>
         <article class="detail">
             <p>Detalles del producto </p>
             <ul>
-                <li>Tipo</li>
-                <li>Color</li>
-                <li>Medidas</li>
-                <li>Material</li>
+                <li>Color: <%=product.color%></li>
+                <li><%=product.medidas%></li>
+                <li><%=product.descripcion%></li>
             </ul>
         </article>
     </section>
     <h2 class="titulorel">Productos relacionados</h2>
     <section class="relacionados">
-        <article>
-            <img src="/images/imagentipo.png" alt="">
-            <h4><span class="producto"> Producto</span><span class="precio"> $$$$ </span></h4>
-        </article>
-        <article>
-            <img src="/images/imagentipo.png" alt="">
-            <h4><span class="producto"> Producto</span><span class="precio"> $$$$ </span></h4>
-        </article>
-        <article>
-            <img src="/images/imagentipo.png" alt="">
-            <h4><span class="producto"> Producto</span><span class="precio"> $$$$ </span></h4>
-        </article>
-        <article>
-            <img src="/images/imagentipo.png" alt="">
-            <h4><span class="producto"> Producto</span><span class="precio"> $$$$ </span></h4>
-        </article>
-
+        <%for(let i=0 ; i < products.length ; i++) {
+            if(product.rubro == products[i].rubro && product.id != products[i].id && product.nombre != products[i].nombre) { %>
+        <a href="/products/detail/<%=products[i].id%>">
+            <article>
+                <img src="/images/products/<%=products[i].imagen%>" alt="">
+                <h4><span class="producto"> <%=products[i].nombre%></span><span class="precio"> $<%=products[i].precio%> </span></h4>
+            </article>
+        </a>
+        <% } } %>
     </section>
 </main>
 <%-include('../partials/footer')%>
