--- a/cloverbazar/views/products/productAdd.ejs
+++ b/cloverbazar/views/products/productAdd.ejs
@@ -7,19 +7,19 @@
         <form action="">
             <div class="contenedor-datos">
                 <label for="nombreProducto">Nombre de Producto:</label>
-                <input type="text" id="nombreProducto" placeholder="Nombre de producto">
+                <input type="text" name="nombreProducto" id="nombreProducto" placeholder="Nombre de producto">
                 <label for="rubroProducto">Rubro:</label>
-                <input type="text" id="rubroProducto" placeholder="Rubro">
+                <input type="text" name="rubroProducto" id="rubroProducto" placeholder="Rubro">
                 <label for="colorProducto">Color:</label>
-                <input type="text" id="colorProducto" placeholder="Color">
+                <input type="text" name="colorProducto" id="colorProducto" placeholder="Color">
                 <label for="medidasProducto">Medidas:</label>
-                <input type="text" id="medidasProducto" placeholder="Medidas">
+                <input type="text" name="medidasProducto" id="medidasProducto" placeholder="Medidas">
                 <label for="descripcionProducto">Descripcion:</label>
-                <input type="text" id="descripcionProducto" placeholder="Descripcion">
+                <input type="text" name="descripcionProducto" id="descripcionProducto" placeholder="Descripcion">
             </div>
             <div class="contenedor-img">
                 <label for="imgProducto">Imagen de Producto:</label>
-                <input type="file" id="imgProducto">
+                <input type="file" name="imgProducto" id="imgProducto">
             </div>
             <div class="contenedor-botones">
                 <button type="submit">Agregar</button>
