--- a/cloverbazar/views/products/productEdit.ejs
+++ b/cloverbazar/views/products/productEdit.ejs
@@ -1,9 +1,31 @@
-<%-include('../partials/header', {title: 'Edicion de productos'})%>
+<link rel="stylesheet" href="/stylesheets/productAdd.css">
 
+<%-include('../partials/header', {title: 'Crear nuevo producto'})%>
 <main>
-    
+    <section>
+        <h2>Agregar productos</h2>
+        <form action="">
+            <div class="contenedor-datos">
+                <label for="nombreProducto">Nombre de Producto:</label>
+                <input type="text" name="nombreProducto" id="nombreProducto" value= <%=product.nombre %> >
+                <label for="rubroProducto">Rubro:</label>
+                <input type="text" name="rubroProducto" id="rubroProducto" value= <%=product.rubro %> >
+                <label for="colorProducto">Color:</label>
+                <input type="text" name="colorProducto" id="colorProducto" value=<%=product.color %> >
+                <label for="medidasProducto">Medidas:</label>
+                <input type="text" name="medidasProducto" id="medidasProducto" value=<%=product.medidas %> >
+                <label for="descripcionProducto">Descripcion:</label>
+                <input type="text" name="descripcionProducto" id="descripcionProducto" value=<%=product.descripcion %>>
+            </div>
+            <div class="contenedor-img">
+                <label for="imgProducto">Imagen de Producto:</label>
+                <input type="file" name="imgProducto" id="imgProducto">
+            </div>
+            <div class="contenedor-botones">
+                <button type="submit">Agregar</button>
+                <button type="reset">Resetear</button>
+            </div>
+        </form>
+    </section>
 </main>
-
-
-
 <%-include('../partials/footer')%>
